fix: sidebar z-index highest priority

--- a/src/styles/layout/_sidebar.scss
+++ b/src/styles/layout/_sidebar.scss
@@ -1,4 +1,5 @@
 .sidebar {
+    z-index: 9999;
     position: fixed;
     top: 50%;
     transform: translateY(-50%);
